Dibuat menggunakan Colab

--- a/Untitled0.ipynb
+++ b/Untitled0.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyOa61EebJ45Lu/LktCqszEo",
+      "authorship_tag": "ABX9TyPACJJwwQj7Pk11VdiE5LoX",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -27,157 +27,129 @@
       ]
     },
     {
+      "cell_type": "markdown",
+      "source": [],
+      "metadata": {
+        "id": "yf4ViByHp22N"
+      }
+    },
+    {
       "cell_type": "code",
-      "execution_count": 63,
+      "execution_count": 24,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
-        "id": "lVOdEZiDdhC1",
-        "outputId": "231935de-3a1a-4178-97de-cf35695a430a"
+        "id": "E2OHhUxyf5j4",
+        "outputId": "7decf234-b818-4a78-ed00-6d5ceea4b7f2"
       },
       "outputs": [
         {
-          "output_type": "stream",
           "name": "stdout",
+          "output_type": "stream",
           "text": [
-            "43\n",
-            "<class 'list'>\n"
+            "-Berapa km jarak rumah ketempat tukang bakso:5.5\n",
+            "-tempat tukang bakso ada di daerah mana:Nongsa\n",
+            "-Berapa porsi makan yang Anda beli :0.5\n",
+            "-Siapa Nama Pelanggan?:Aldi\n"
           ]
         }
       ],
       "source": [
-        "# deklarasi variabel list\n",
-        "numbers = [23,43,15,34]\n",
-        "# cara mengakses elemen dan variabel list\n",
-        "numbers [0] # 23\n",
-        "numbers [1] # 43\n",
-        "numbers [2] # 15\n",
-        "numbers [3] # 34\n",
-        "# cara mengubah nilai elemen dalam variabel list\n",
-        "numbers [2] = 51\n",
-        "numbers [2] # 51\n",
+        "#Data Float & str\n",
         "\n",
-        "print (numbers[1]) #lakukan untuk setiap indexnya dan lihat hasilnya\n",
-        "\n",
-        "# Output\n",
-        "print (type(numbers))"
+        "Jarak = float (input(\"-Berapa km jarak rumah ketempat tukang bakso:\"))\n",
+        "Daerah = str (input(\"-tempat tukang bakso ada di daerah mana:\"))\n",
+        "total = float (input(\"-Berapa porsi makan yang Anda beli :\"))\n",
+        "Nama = str (input(\"-Siapa Nama Pelanggan?:\"))\n",
+        "\n"
       ]
     },
     {
       "cell_type": "code",
       "source": [
-        "#deklarasi variabellist number\n",
-        "numbers = [1, 2, 3]\n",
+        "# penggunaan berbagai macam karakter\n",
         "\n",
-        "#menambahkan elemen di indeks ke -4\n",
-        "numbers.insert(4,5) #[1, 2, 3, 5]\n",
+        "#Input\n",
         "\n",
-        "#mengubah elemen di indeks ke-4\n",
-        "numbers[3]=4  #[1, 2, 3, 4]\n",
+        "game                      = \" mobile legends \"\n",
+        "waktu_perkiraan_1game     =  20\n",
+        "Lama_main_keseluruhan     =  80.0\n",
+        "skor_game_hari_ini        = 255\n",
+        "skor_game_hari_sebelumnya = 377\n",
         "\n",
-        "#menghapus elemen di indeks ke -2\n",
-        "numbers.pop(2) #[1, 2, 4]\n",
+        "food = \"Mi ayam bakso\" # Define food here\n",
         "\n",
-        "#print lalu lihat hasilnya\n"
+        "#output\n",
+        "print(\"Aldi main %s\" % game)\n",
+        "print(\"lama main aldi \" + str(Lama_main_keseluruhan))\n",
+        "print(\"lama main game aldi %s\" % (food))"
       ],
       "metadata": {
         "colab": {
-          "base_uri": "https://localhost:8080/"
+          "base_uri": "https://localhost:8080/",
+          "height": 109
         },
-        "id": "X5otg06Ymwun",
-        "outputId": "df2046b5-475b-4a9f-f27b-db5060f84b26"
+        "id": "stRGNJ2Akl-O",
+        "outputId": "caa0a66d-c8b4-40f5-cd68-be2444a79e15"
       },
-      "execution_count": 64,
+      "execution_count": 47,
       "outputs": [
         {
-          "output_type": "execute_result",
-          "data": {
-            "text/plain": [
-              "3"
-            ]
-          },
-          "metadata": {},
-          "execution_count": 64
+          "output_type": "error",
+          "ename": "SyntaxError",
+          "evalue": "invalid syntax (ipython-input-2548227041.py, line 6)",
+          "traceback": [
+            "\u001b[0;36m  File \u001b[0;32m\"/tmp/ipython-input-2548227041.py\"\u001b[0;36m, line \u001b[0;32m6\u001b[0m\n\u001b[0;31m    waktu_perkiraan_1game     =  20 menit\u001b[0m\n\u001b[0m                                    ^\u001b[0m\n\u001b[0;31mSyntaxError\u001b[0m\u001b[0;31m:\u001b[0m invalid syntax\n"
+          ]
         }
       ]
     },
     {
       "cell_type": "code",
-      "source": [
-        "\n",
-        "# deklarasi variabel list num numbers = [1, 2, 3]\n",
-        "\n",
-        "#mehambahkan elemen di indeks ke-4\n",
-        "numbers.insert (4, 5) # [1, 2, 3, 5]\n",
-        "\n",
-        "#megubah elemen di indeks ke -4\n",
-        "numbers[3] = 4 # [1, 2, 3, 4]\n",
-        "\n",
-        "# menghapus elemen di indeks ke-2\n",
-        "numbers.pop(2) # [1, 2, 4]\n",
-        "\n",
-        "#print setiap hasil perubahan dan amati hasilnya\n",
-        ""
-      ],
       "metadata": {
-        "id": "G9u2YH805jEu",
-        "colab": {
-          "base_uri": "https://localhost:8080/"
-        },
-        "outputId": "1657ce15-e00f-4493-e8f7-7a0dd00dc95f"
+        "id": "fa9aab04"
       },
-      "execution_count": 65,
-      "outputs": [
-        {
-          "output_type": "execute_result",
-          "data": {
-            "text/plain": [
-              "4"
-            ]
-          },
-          "metadata": {},
-          "execution_count": 65
-        }
-      ]
+      "source": [
+        "# Contoh penggunaan variabel\n",
+        "\n",
+        "print(f\"Pelanggan bernama {Nama} membeli {total} porsi bakso.\")\n",
+        "print(f\"Jarak rumah {Nama} ke tempat bakso di daerah {Daerah} adalah {Jarak} km.\")"
+      ],
+      "execution_count": null,
+      "outputs": []
     },
     {
       "cell_type": "code",
       "source": [
-        "# deklarasi variabel list\n",
-        "myList = [1,\"Rumah\", 4.5, True,[\"Kamar mandi\", \"Kamar mandi\"]]\n",
+        "# Kalkulator sederhana\n",
+        "a = 1000\n",
+        "b = 1000\n",
         "\n",
-        "# cara mengakses elemen dalam variabel list\n",
-        "print(myList [0]) # 1\n",
-        "print(myList [1]) # \"Rumah\"\n",
-        "print(myList [3]) # True\n",
-        "print(myList [4]) # [\"Kamar mandi\", \"Kamar tidur\"]\n",
+        "#Output\n",
         "\n",
-        "# cara mengakses elemen dalam sublist\n",
-        "print(myList[4][0]) # \"kamar tidur\"\n",
-        "print(myList[4][1]) # \"kamar tidur\"\n",
-        "\n",
-        "#lakukan print lalu amati hasilnya"
+        "print(\"1.penjumlahan=\",a+b)\n",
+        "print(\"2.pengurangan=\",a-b)\n",
+        "print(\"3.perkalian=\",a*b)\n",
+        "print(\"4.pembagian=\",a/b)"
       ],
       "metadata": {
-        "id": "1wJMa8KI7Nvz",
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
-        "outputId": "de37d241-824b-4b7a-a6e9-9d2e862370d3"
+        "id": "RjKcbPnDnJ_F",
+        "outputId": "ae956a15-5397-4b91-e3e5-017f8c4ba901"
       },
-      "execution_count": 2,
+      "execution_count": 26,
       "outputs": [
         {
           "output_type": "stream",
           "name": "stdout",
           "text": [
-            "1\n",
-            "Rumah\n",
-            "True\n",
-            "['Kamar mandi', 'Kamar mandi']\n",
-            "Kamar mandi\n",
-            "Kamar mandi\n"
+            "1.penjumlahan= 2000\n",
+            "2.pengurangan= 0\n",
+            "3.perkalian= 1000000\n",
+            "4.pembagian= 1.0\n"
           ]
         }
       ]
@@ -185,35 +157,31 @@
     {
       "cell_type": "code",
       "source": [
-        "FirstName = \"Aldi\"\n",
-        "LastName  = \"Togar\"\n",
-        "Age       = 19\n",
-        "isMarried = False\n",
+        "#menegecek bilangan\n",
         "\n",
-        "# OUTPUT\n",
+        "bilangan = 10\n",
+        "hasil    = (bilangan > 0) and (bilangan % 2 == 0)\n",
+        "hasil    = (bilangan > 0) and (bilangan % 2 == 0)\n",
         "\n",
-        "print(type(FirstName))\n",
-        "print(type(LastName))\n",
-        "print(type(Age))\n",
-        "print(type(isMarried))"
+        "#output\n",
+        "print(\"1.Genap dan positif\", hasil)\n",
+        "print(\"2.Genap dan positif\", hasil)"
       ],
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
-        "id": "FXiIUM7PpqWI",
-        "outputId": "3710497e-14bf-4933-b664-06257f45a40f"
+        "id": "wyZw6ijwo4IC",
+        "outputId": "02222e23-2d23-4c43-b4de-a1812576da06"
       },
-      "execution_count": 52,
+      "execution_count": 35,
       "outputs": [
         {
           "output_type": "stream",
           "name": "stdout",
           "text": [
-            "<class 'str'>\n",
-            "<class 'str'>\n",
-            "<class 'int'>\n",
-            "<class 'bool'>\n"
+            "1.Genap dan positif True\n",
+            "2.Genap dan positif True\n"
           ]
         }
       ]
@@ -221,34 +189,30 @@
     {
       "cell_type": "code",
       "source": [
-        "# VARIABEL DICTIONARY\n",
+        "#Kalkulator Kasir\n",
+        "harga_makan = int (input(\"Berapa harga mi Ayam per porsi? = \"))\n",
+        "jumlah_makan =int (input(\"Berapa porsi yang Anda beli? = \"))\n",
+        "total_makan = harga_makan * Jumlah_makan\n",
         "\n",
-        "data_diri = {\"FirstName\" : \"Aldi\", \"LastName\" : \"Togar\",  \"Age\" : 19,\"isMarried\" : False}\n",
-        "\n",
-        "# OUTPUT DIOCTIONARY\n",
-        "\n",
-        "print(data_diri['FirstName'], type (data_diri['FirstName']))\n",
-        "print(data_diri[\"LastName\"], type (data_diri[\"LastName\"]))\n",
-        "print(data_diri[\"Age\"], type (data_diri[\"Age\"]))\n",
-        "print(data_diri[\"isMarried\"], type (data_diri[\"isMarried\"]))"
+        "#OUTPUT\n",
+        "print(f\"Harga makan per porsi = {harga_makan}, totalnya adalah {total_makan}\")"
       ],
       "metadata": {
-        "id": "WC-e92eRqSMi",
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
-        "outputId": "49d37c82-e7a3-43fb-bb17-58e1532108dd"
+        "id": "UqJNKZKgsx4f",
+        "outputId": "3b412116-1a93-4768-9d0f-39897409b658"
       },
-      "execution_count": 51,
+      "execution_count": 45,
       "outputs": [
         {
           "output_type": "stream",
           "name": "stdout",
           "text": [
-            "Aldi <class 'str'>\n",
-            "Togar <class 'str'>\n",
-            "19 <class 'int'>\n",
-            "False <class 'bool'>\n"
+            "Berapa harga mi Ayam per porsi? = 35000\n",
+            "Berapa porsi yang Anda beli? = 5\n",
+            "Harga makan per porsi = 35000, totalnya adalah 175000\n"
           ]
         }
       ]
@@ -256,112 +220,13 @@
     {
       "cell_type": "code",
       "source": [
-        "# TODO: VARIABEL INPEKSI BERTIPE DATA LIST\n",
-        "inpeksi = [\n",
-        "    \"pemahaman terhadap rencanca dan desain \",\n",
-        "    \"ketersediaan bahan dan peralatan\",\n",
-        "    \"pengawasan pekerjaan\",\n",
-        "    \"kualitas kontruksi\",\n",
-        "    \"keselamatan kerja\",\n",
-        "    \"koordinasi dengan pemilik proyek\",]\n",
-        "\n",
-        "#OUTPUT DAFTAR INSPEKSI\n",
-        "print(\"Daftar Inspeksi:\")\n",
-        "for item in inpeksi: print(\"-\",item)"
+        "#Ekspresi\n"
       ],
       "metadata": {
-        "colab": {
-          "base_uri": "https://localhost:8080/"
-        },
-        "id": "wQMoz5sGrNic",
-        "outputId": "7808a30f-080c-4e16-a986-f2cd6d97eab3"
+        "id": "Tzl1jfYh2ZKR"
       },
-      "execution_count": 53,
-      "outputs": [
-        {
-          "output_type": "stream",
-          "name": "stdout",
-          "text": [
-            "Daftar Inspeksi:\n",
-            "- pemahaman terhadap rencanca dan desain \n",
-            "- ketersediaan bahan dan peralatan\n",
-            "- pengawasan pekerjaan\n",
-            "- kualitas kontruksi\n",
-            "- keselamatan kerja\n",
-            "- koordinasi dengan pemilik proyek\n"
-          ]
-        }
-      ]
-    },
-    {
-      "cell_type": "code",
-      "source": [
-        "#TIPE DATA DICTIONARY\n",
-        "\n",
-        "start_time = {\"HH\":9,\"mm\":23, \"ss\":57}\n",
-        "\n",
-        "end_Time ={ \"HH\":15, \"mm\":25,\"ss\":43}\n",
-        "\n",
-        "# OUTPUT\n",
-        "print(\"start_time: {}:{}:{}\".format(start_time[\"HH\"], start_time[\"mm\"], start_time[\"ss\"]))\n",
-        "print(\"end_Time: {}:{}:{}\".format(end_Time[\"HH\"], end_Time[\"mm\"], end_Time[\"ss\"]))"
-      ],
-      "metadata": {
-        "colab": {
-          "base_uri": "https://localhost:8080/"
-        },
-        "id": "PkkC9jTVwO_n",
-        "outputId": "35960b74-7875-42f3-cb58-e23b59bde95c"
-      },
-      "execution_count": 56,
-      "outputs": [
-        {
-          "output_type": "stream",
-          "name": "stdout",
-          "text": [
-            "start_time: 9:23:57\n",
-            "end_Time: 15:25:43\n"
-          ]
-        }
-      ]
-    },
-    {
-      "cell_type": "code",
-      "source": [
-        "# Katalog produk dari pemasok A dan B dalam bentuk set\n",
-        "katalog_A = {\"Laptop\", \"Mouse\", \"Keyboard\", \"Monitor\"}\n",
-        "katalog_B = {\"Printer\", \"Mouse\", \"Headset\", \"Monitor\"}\n",
-        "\n",
-        "# Daftar produk diskon dalam bentuk tuple\n",
-        "produk_diskon = (\"Laptop\", \"Headset\", \"Keyboard\")\n",
-        "\n",
-        "# 1. Gabungkan katalog_A dan katalog_B menjadi set katalog_lengkap\n",
-        "katalog_lengkap = katalog_A.union(katalog_B)\n",
-        "\n",
-        "# 2. produk yang ada di katalog dan masuk diskon\n",
-        "produk_promo_aktif = katalog_lengkap.intersection(produk_diskon)\n",
-        "\n",
-        "print(\"Katalog Lengkap :\", katalog_lengkap)\n",
-        "print(\"Produk Promo Aktif :\", produk_promo_aktif)"
-      ],
-      "metadata": {
-        "colab": {
-          "base_uri": "https://localhost:8080/"
-        },
-        "id": "neytIv4034z0",
-        "outputId": "3c2dba0d-4ef1-41cf-a9d5-fc54db612261"
-      },
-      "execution_count": 60,
-      "outputs": [
-        {
-          "output_type": "stream",
-          "name": "stdout",
-          "text": [
-            "Katalog Lengkap : {'Mouse', 'Monitor', 'Headset', 'Printer', 'Keyboard', 'Laptop'}\n",
-            "Produk Promo Aktif : {'Laptop', 'Headset', 'Keyboard'}\n"
-          ]
-        }
-      ]
+      "execution_count": null,
+      "outputs": []
     }
   ]
 }
