Dibuat menggunakan Colab

--- a/Untitled0.ipynb
+++ b/Untitled0.ipynb
@@ -5495,6 +5495,16 @@
       ]
     },
     {
+      "cell_type": "markdown",
+      "source": [
+        "Jadi hasil pratikum Data Wrangling telah berhasil dilaksanakan dengan baik dan seluruh tahapan—mulai dari gathering, assessing, hingga cleaning—dapat berjalan sesuai prosedur. Melalui praktikum ini, dapat dipahami bahwa kualitas data sangat menentukan keberhasilan analisis pada tahap selanjutnya. Dengan menguasai proses pengambilan, penilaian, dan pembersihan data, analisis yang akan dilakukan menjadi lebih efektif, akurat, dan terpercaya. Praktikum ini juga menunjukkan bahwa persiapan data merupakan langkah penting yang tidak dapat dilewati dalam setiap proyek data.\n",
+        "\n"
+      ],
+      "metadata": {
+        "id": "XPoWoEZ2a8OH"
+      }
+    },
+    {
       "cell_type": "code",
       "source": [
         "Aldi_df.tail()\n"
@@ -5882,7 +5892,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyPwouIk9o925bBwbSsrrDTC",
+      "authorship_tag": "ABX9TyMtP8RmE5KzLnZmSVGhWM8u",
       "include_colab_link": true
     },
     "kernelspec": {
